squashin' bugs & prettifyin'

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,8 @@ body {
     flex-grow: 1;
   }
 }
+
+#iso {
+  text-align: center;
+  font-size: 5vh;
+}
