--- a/src/ZodiacYear/style.scss
+++ b/src/ZodiacYear/style.scss
@@ -1,55 +1,3 @@
 #months {
   display: flex;
-
-  span:nth-child(1) {
-    flex-grow: 7.12;
-  }
-
-  span:nth-child(2) {
-    flex-grow: 6.3;
-  }
-
-  span:nth-child(3) {
-    flex-grow: 10.39;
-  }
-
-  span:nth-child(4) {
-    flex-grow: 6.84;
-  }
-
-  span:nth-child(5) {
-    flex-grow: 10.68;
-  }
-
-  span:nth-child(6) {
-    flex-grow: 7.94;
-  }
-
-  span:nth-child(7) {
-    flex-grow: 5.75;
-  }
-
-  span:nth-child(8) {
-    flex-grow: 10.13;
-  }
-
-  span:nth-child(9) {
-    flex-grow: 12.05;
-  }
-
-  span:nth-child(10) {
-    flex-grow: 6.58;
-  }
-
-  span:nth-child(11) {
-    flex-grow: 1.64;
-  }
-
-  span:nth-child(12) {
-    flex-grow: 7.67;
-  }
-
-  span:nth-child(13) {
-    flex-grow: 6.57;
-  }
 }
